# MDA_Project

./: .gitignore  MDA (Group Project Information).docx  Project_Proposal.docx  README.md  datainstaller.py  dataparqueter.py  main.py  pyproject.toml
